<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/window_background"
              tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:padding="30dp"
            android:background="@color/io_background"
            android:orientation="vertical">

        <TextView
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="30sp"
                android:maxLines="3"
                android:textColor="@color/text_main"
                android:fontFamily="sans-serif-light"
                tools:text="5+10-3" />

        <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="50sp"
                android:maxLines="2"
                android:fontFamily="sans-serif"
                android:textColor="@color/text_main"
                tools:text="12"/>

    </LinearLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_clear_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:textColor="@color/text_main"
                    android:text="@string/ce"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:textColor="@color/text_main"
                    android:text="@string/c"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_backspace"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:textColor="@color/text_main"
                    android:text="@string/bs"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:textColor="@color/text_main"
                    android:id="@+id/button_division"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:text="@string/divide"/>

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_7"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_7" />
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_8"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_8"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_9"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_9" />
            <androidx.appcompat.widget.AppCompatButton
                    android:textColor="@color/text_main"
                    android:id="@+id/button_multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:text="@string/multiply"/>

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_4" />
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_5"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_5" />
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_6"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_6" />
            <androidx.appcompat.widget.AppCompatButton
                    android:textColor="@color/text_main"
                    android:id="@+id/button_subtraction"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:text="@string/minus"/>

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_1" />
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_2" />
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_3" />
            <androidx.appcompat.widget.AppCompatButton
                    android:textColor="@color/text_main"
                    android:id="@+id/button_addition"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:text="@string/plus"/>

        </TableRow>
        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_plus_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:text="@string/plus_and_minus"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_0"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Button_Style"
                    android:text="@string/_0" />
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Control_Button_Style"
                    android:text="@string/dot"/>
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_equals"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    style="@style/Control_Button_Style"
                    android:textColor="@color/text_main"
                    android:text="@string/equal"/>

        </TableRow>
    </TableLayout>


</LinearLayout>

